--- a/Anti_UAV_2_yolo.ipynb
+++ b/Anti_UAV_2_yolo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "TEST_IMAGES_INPUT_DIR = r\"C:\\project\\Computer_Vision\\term_paper_2023\\datasets\\test_Anti-UAV\\test\\img\"\n",
@@ -32,7 +32,7 @@
     "TRAIN_IMAGES_INPUT_DIR = r\"C:\\project\\Computer_Vision\\term_paper_2023\\datasets\\antiuav_train\\img\"\n",
     "TRAIN_LABELS_INPUT_DIR = r\"C:\\project\\Computer_Vision\\term_paper_2023\\datasets\\antiuav_train\\xml\"\n",
     "\n",
-    "YOLO_DIR = r\"C:\\project\\Computer_Vision\\term_paper_2023\\datasets\\Anti_UAV_yolo\"\n",
+    "YOLO_DIR = r\"C:\\project\\Computer_Vision\\term_paper_2023\\datasets\\Anti_UAV_yolo_1024\"\n",
     "\n",
     "TEST_IMAGES_YOLO_DIR = os.path.join(YOLO_DIR, \"test\", \"images\")\n",
     "TEST_LABELS_YOLO_DIR = os.path.join(YOLO_DIR, \"test\", \"labels\")\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def dataset2yolo(df, images_path, labels_path):\n",
@@ -126,7 +126,7 @@
     "        with open(path_label_output, 'w') as f:\n",
     "            f.write(str_label_yolo)\n",
     "        image_save_path = os.path.join(images_path, f\"{row['id']}.jpg\")\n",
-    "        Image.open(row['path_image']).resize((512,512)).save(image_save_path)\n",
+    "        Image.open(row['path_image']).resize((1024,1024)).save(image_save_path)\n",
     "        # shutil.copy(row['path_image'], os.path.join(images_path, f\"{row['id']}.jpg\"))"
    ],
    "metadata": {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "df_test = get_df(TEST_IMAGES_INPUT_DIR, TEST_LABELS_INPUT_DIR)\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -156,7 +156,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "3ea6c689a0464f0f9593acca2405b1a2"
+       "model_id": "4d8a7a282de647a39ca9b859184624ac"
       }
      },
      "metadata": {},
@@ -168,7 +168,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b09051af206546459b3e34c7e6a05279"
+       "model_id": "3bb376a08eb040ed9d3c17e9172cb2ee"
       }
      },
      "metadata": {},
@@ -180,7 +180,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "03f39419ab3041d69df4676b1c3affbd"
+       "model_id": "51549c43238240b3b50d12aa432f9116"
       }
      },
      "metadata": {},
@@ -188,9 +188,9 @@
     },
     {
      "data": {
-      "text/plain": "'C:\\\\project\\\\Computer_Vision\\\\term_paper_2023\\\\datasets\\\\Anti_UAV_yolo.zip'"
+      "text/plain": "'C:\\\\project\\\\Computer_Vision\\\\term_paper_2023\\\\datasets\\\\Anti_UAV_yolo_1024.zip'"
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
